--- a/.github/workflows/push-image-arm.yaml
+++ b/.github/workflows/push-image-arm.yaml
@@ -24,5 +24,5 @@ jobs:
     
     - name: Build and push the Docker image latest
       run: |
-        docker build . --file Dockerfile --tag neytor/cloudflare-ddns-updater:arm && 
+        docker build . --file Dockerfile-arm --tag neytor/cloudflare-ddns-updater:arm && 
         docker image ls && docker push neytor/cloudflare-ddns-updater:arm
