Fix arm support

--- a/Dockerfile-arm
+++ b/Dockerfile-arm
@@ -1,5 +1,8 @@
-# Usa la imagen base de Python 3.12 en Alpine
+# Usa la imagen base de Python 3.12 en Alpine para ARM
 FROM arm64v8/python:3.12-alpine
+
+# Instala pip
+RUN apk add --no-cache py3-pip
 
 # Establece el directorio de trabajo
 WORKDIR /app
