--- a/Dockerfile-arm
+++ b/Dockerfile-arm
@@ -1,5 +1,5 @@
 # Usa la imagen base de Python 3.12 en Alpine
-FROM arm64v8/python:3.12-alpine
+FROM arm64v8/python:alpine
 
 # Establece el directorio de trabajo
 WORKDIR /app
