--- a/.github/workflows/push-image-arm.yaml
+++ b/.github/workflows/push-image-arm.yaml
@@ -1,20 +1,19 @@
-name: Docker Image CI for cloudflare-ddns-updater:arm
+name: Docker Image CI ARM - Emby Server
 
 on:
-  workflow_dispatch: # Habilita la ejecución manual
+  workflow_dispatch: # Agrega esta entrada para habilitar la ejecución manual
     branches: [ "master", "main" ] # Opcional: restringe las ramas donde se puede ejecutar
 
 jobs:
+
   build_push_image:
+
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-      name: Checkout código del repo
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
+      name: Download codigo from repo
+      
     - name: Docker Login
       uses: docker/login-action@v3.1.0
       with:
@@ -22,8 +21,8 @@ jobs:
         username: ${{ secrets.USER_HUB }}
         password: ${{ secrets.PASS_HUB }}
         
-    - name: Build and push the Docker image for ARM
+    
+    - name: Build and push the Docker image latest
       run: |
-        docker buildx create --use
-        docker buildx build --platform linux/arm64 -f Dockerfile-arm \
-          -t neytor/cloudflare-ddns-updater:arm --push .
+        docker build . --file Dockerfile --tag neytor/cloudflare-ddns-updater && 
+        docker image ls && docker push neytor/cloudflare-ddns-updater
